<resources>
    <string name="app_name">SurfStop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="login_error">Invalid Username/Password</string>
    <string name="success">Success!</string>
    <string name="new_user_signup">New User Sign Up</string>
    <string name="logout">Logout</string>
    <string name="surf_now">Surf Now</string>
    <string name="groups">Groups</string>
    <string name="profile">Profile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_password_match">Passwords do not match.</string>
    <string name="account_exists">Account already exists.</string>
    <string name="sign_up_error">Sign up error.</string>
    <string name="group_description_label">Group Description:</string>
    <string name="weather_label">Weather:</string>
    <string name="max_break_label">Max Break:</string>
    <string name="group_description">Description of group content</string>
    <string name="height">Height</string>
    <string name="min_break_label">Min Break:</string>
    <string name="air_temp_label">Air Temp:</string>
    <string name="temp">Temp</string>
    <string name="water_temp_label">Water Temp:</string>
    <string name="weather_description">Weather Description</string>
    <string name="sunset_label">Sunset:</string>
    <string name="time">Time</string>
    <string name="post_content">post content</string>
    <string name="how_the_surf">How\'s the surf...?</string>
    <string name="post">Post!</string>
    <string name="tag">Tag:</string>
    <string name="surf_height">Surf height:</string>
    <string name="email">Email</string>
    <string name="post_empty">Post is empty!</string>
    <string name="post_too_long">Post exceeds character limit!</string>
    <string name="picture_untaken">Picture wasn\'t taken!</string>
    <string name="user_time">has been a user for</string>
    <string name="posts">Posts</string>
    <string name="tags">Tags</string>
    <string name="other_groups">Other Groups:</string>
    <string name="beach_groups">Beach Groups:</string>
    <string name="group">Group:</string>
    <string name="popup_message">Notification message</string>
    <string name="ok">OK</string>
    <string name="beach_posts">Beach Posts</string>
    <string name="long_post_prompt">What\'s on your mind?</string>

    <string name="weather_popup">"Weather is unavailable when offline."
        "Connect to internet to access live weather updates."</string>
    <string name="group_popup">"Group favoriting and un-favoriting is unavailable in offline mode."
        "Connect to the internet to favorite new groups."</string>
    <string name="no_beaches_popup">"You have no favorited beaches! To populate your main"
            "timeline, go to the Groups' page and favorite some Beach Groups."</string>
    <string name="camera_popup">"Uploading photos in posts is unavailable in offline mode." +
        "Connect to the internet to take photos."</string>

    <string name="is_this_a_beach">Is this a beach?</string>
    <string name="the_beach_is">The beach is:</string>
    <string name="clean">clean</string>
    <string name="dirty">dirty</string>
    <string name="picture_not_uploaded">Picture wasn\'t uploaded!</string>
    <string name="fareinheit">°F</string>
    <string name="feet">ft</string>

    <string-array name="tags_array">
        <item>awesome</item>
        <item>poor</item>
        <item>cold</item>
        <item>dirty</item>
        <item>crowded</item>
        <item>wipeout</item>
        <item>rough</item>
    </string-array>
</resources>