<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:icon="?attr/actionModeCloseDrawable"
        android:title="@string/logout"
        app:showAsAction="always"/>
    <item
        android:id="@+id/shortTimeline"
        android:enabled="true"
        android:icon="@drawable/surfer"
        android:title="@string/surf_now"
        app:showAsAction="always" />
    <item
        android:id="@+id/groups"
        android:enabled="true"
        android:icon="@drawable/mutual_love"
        android:title="@string/groups"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/user_profile"
        android:title="@string/profile"
        app:showAsAction="always" />
</menu>