<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/customborder"
    tools:context=".ShortPostDetailActivity"
    android:transitionName="border">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:transitionName="profile"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:autoLink="all"
        android:textSize="20sp"
        android:transitionName="body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/ivMedia"
        tools:text="@string/post_content" />

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/ivMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBody"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        android:transitionName="media"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:textSize="20sp"
        android:textStyle="bold"
        android:transitionName="username"
        app:layout_constraintEnd_toStartOf="@+id/tvTime"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        android:textStyle="bold"
        android:transitionName="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/time" />

    <TextView
        android:id="@+id/tvTagLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tag"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvBody"
        app:layout_constraintTop_toBottomOf="@id/tvBeachShows" />

    <TextView
        android:id="@+id/tvTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvTagLabel"
        app:layout_constraintStart_toEndOf="@+id/tvTagLabel" />

    <TextView
        android:id="@+id/tvSurfHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/surf_height"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvTagLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTagLabel" />

    <TextView
        android:id="@+id/tvSurfHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvSurfHeightLabel"
        app:layout_constraintStart_toEndOf="@+id/tvSurfHeightLabel" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/username"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvHasBeenUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="center_horizontal"
            android:text="@string/user_time"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tvUser"
            app:layout_constraintTop_toTopOf="@+id/tvUser" />

        <TextView
            android:id="@+id/tvUserTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tvHasBeenUser"
            app:layout_constraintTop_toTopOf="@+id/tvHasBeenUser"
            tools:text="@string/time" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvBeachShows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/the_beach_is"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tvBody"
        app:layout_constraintTop_toBottomOf="@+id/tvBody" />

    <TextView
        android:id="@+id/tvBeachClassified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tvBeachShows"
        app:layout_constraintStart_toEndOf="@+id/tvBeachShows"
        app:layout_constraintTop_toTopOf="@+id/tvBeachShows" />
</androidx.constraintlayout.widget.ConstraintLayout>